# continuwuity

./: Cargo.toml  MATRIX_CLIENT_SETUP.md  Makefile
.forgejo/workflows/: release-image.yml
.github/workflows/: release-image.yml
deploy/: README.md  continuwuity.toml  docker-compose.yml  element-config.json
deploy/celesteai/: Makefile  README.md  continuwuity.toml  element-config.json
deploy/celesteai/well-known/: nginx.conf
docker/: Dockerfile  musl.Dockerfile
docs/: auth-flow-client-prompt.md
docs/deploying/: _meta.json
src/admin/user/: commands.rs
src/api/: router.rs
src/api/client/: session.rs
src/api/client/account/: mod.rs  register.rs  threepid.rs
src/router/: layers.rs  request.rs
src/service/mailer/: messages.rs  mod.rs
src/service/templates/mail/: _base.txt  change_email.txt  login_code.html  login_code.txt  new_account.txt  new_account_code.html  new_account_code.txt  password_reset.html  password_reset.txt
src/service/threepid/: mod.rs  session.rs
src/service/uiaa/: mod.rs
src/web/pages/: password_reset.rs
